--- a/styles.css
+++ b/styles.css
@@ -162,3 +162,84 @@ body {
     color: #000000;
     border-radius: 5px;
   }
+
+  .login-container {
+    margin-top: 20px;
+    background: radial-gradient(87.42% 75.42% at 50% 42.37%, rgb(0 0 0) 2.92%, #7334ea 88%);
+    border-radius: 35px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+    width: 300px;
+  }
+  
+  .login-title {
+    color: #ffffff;
+    font-family: Helvetica;
+    margin-bottom: 10px;
+  }
+  
+  .login-form {
+    font-family: Helvetica;
+    display: flex;
+    flex-direction: column;
+  
+  }
+  
+  .login-label {
+    color: #ffffff;
+    font-family: Helvetica;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .login-input {
+    color: #000000;
+    font-family: Helvetica;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+  
+    border-radius: 30px;
+  }
+  
+  .login-button {
+    color: #ffffff;
+    background-color: #bcec30;
+    font-family: Helvetica;
+    color: black;
+    transition: .5s;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .login-button:hover {
+    background-color: #88a62f;
+  }
+
+  .app {
+    position: relative;
+    font-family: Helvetica;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* padding-top: 20px;
+    padding-bottom: 200px; */
+    background: #202020;
+    min-height: 100vh;
+  }
+
+  .login-link {
+    font-family: Helvetica;
+    color: #ffffff;
+    text-decoration: none;
+  }
+  .login-link:hover {
+    text-decoration: underline;
+  }
+  
+  
